--- a/app/src/main/res/layout/item_recyclerview_contact.xml
+++ b/app/src/main/res/layout/item_recyclerview_contact.xml
@@ -9,14 +9,17 @@
 
 	<TextView
 		android:id="@+id/tv_title"
-		android:text="A"
-		android:textSize="50sp"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
+		android:text="#"
+		android:gravity="center"
+		android:textColor="@color/colorAccent"
+		android:textSize="30sp"
+		android:layout_width="56dp"
+		android:layout_height="56dp"
 		app:layout_constraintTop_toTopOf="parent"
 		app:layout_constraintBottom_toBottomOf="parent"
 		app:layout_constraintVertical_bias="0.512"
 		android:layout_marginLeft="16dp"
+		android:visibility="invisible"
 		app:layout_constraintLeft_toLeftOf="parent"/>
 
 	<com.weikuo.elemenzhang.phonebookwk.view.customview.RoundedLetterView
@@ -24,8 +27,8 @@
 		xmlns:app="http://schemas.android.com/apk/res-auto"
 		android:layout_width="56dp"
 		android:layout_height="56dp"
-		android:layout_marginLeft="100dp"
-		android:layout_marginStart="50dp"
+		android:layout_marginLeft="10dp"
+		android:layout_marginStart="10dp"
 		android:layout_marginTop="8dp"
 		app:layout_constraintBottom_toBottomOf="parent"
 		app:layout_constraintTop_toTopOf="parent"
@@ -47,6 +50,7 @@
 		app:layout_constraintRight_toRightOf="parent"
 		app:layout_constraintLeft_toRightOf="@+id/rlv_name_view"
 		android:layout_marginLeft="8dp"
+		android:textSize="18sp"
 		app:layout_constraintHorizontal_bias="0.109"
 		app:layout_constraintVertical_bias="0.506"/>
 	<CheckBox
