--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -1,9 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto">
+
+
 	<item
-		android:id="@+id/action_settings"
-		android:orderInCategory="100"
+		android:id="@+id/item_search"
+		android:orderInCategory="0"
+		android:icon="@drawable/ic_search_white"
 		android:title="@string/action_settings"
-		app:showAsAction="never"/>
+		app:actionViewClass="android.support.v7.widget.SearchView"
+		app:showAsAction="always"/>
+	<item
+		android:id="@+id/item_delete"
+	    android:orderInCategory="0"
+	    android:icon="@drawable/ic_delete"
+	    android:title="delete"
+	    app:showAsAction="always"
+		/>
+
+	<item
+		android:id="@+id/item_checkall"
+		android:orderInCategory="0"
+		android:title="CheckAll"
+		android:icon="@drawable/ic_select_all"
+		app:actionLayout="@layout/custom_checkbox"
+		app:showAsAction="always"/>
 </menu>
