--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,4 +17,12 @@
 
 	<style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
 
+	<style name="toolbar_theme" parent="@style/ThemeOverlay.AppCompat.Dark">
+	</style>
+
+
+	<style name="CustomCheckbox" parent="@android:style/Widget.CompoundButton.CheckBox">
+		<item name="android:button">@drawable/checkbox_style</item>
+		<item name="android:maxHeight">10dp</item>
+	</style>
 </resources>
