--- a/app/src/main/res/layout/item_recyclerview_contact.xml
+++ b/app/src/main/res/layout/item_recyclerview_contact.xml
@@ -3,7 +3,7 @@
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	android:layout_width="match_parent"
-	android:layout_height="90dp"
+	android:layout_height="70dp"
 	android:gravity="center_vertical"
 	>
 
@@ -13,8 +13,8 @@
 		android:gravity="center"
 		android:textColor="@color/colorAccent"
 		android:textSize="30sp"
-		android:layout_width="56dp"
-		android:layout_height="56dp"
+		android:layout_width="46dp"
+		android:layout_height="46dp"
 		app:layout_constraintTop_toTopOf="parent"
 		app:layout_constraintBottom_toBottomOf="parent"
 		app:layout_constraintVertical_bias="0.512"
@@ -25,8 +25,8 @@
 	<com.weikuo.elemenzhang.phonebookwk.view.customview.RoundedLetterView
 		android:id="@+id/rlv_name_view"
 		xmlns:app="http://schemas.android.com/apk/res-auto"
-		android:layout_width="56dp"
-		android:layout_height="56dp"
+		android:layout_width="46dp"
+		android:layout_height="46dp"
 		android:layout_marginLeft="10dp"
 		android:layout_marginStart="10dp"
 		android:layout_marginTop="8dp"
@@ -41,7 +41,7 @@
 		/>
 
 	<TextView
-		android:text="abfdfkdjfkdlsa"
+		android:text="abc"
 		android:id="@+id/tv_contactname"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
