--- a/app/src/main/res/layout/fragment_tab_content.xml
+++ b/app/src/main/res/layout/fragment_tab_content.xml
@@ -6,74 +6,78 @@
 
 	<android.support.v7.widget.RecyclerView
 		android:id="@+id/rv_contact"
-		android:layout_above="@+id/btn_backup"
 		android:layout_width="match_parent"
-		android:layout_height="match_parent"/>
+		android:layout_height="match_parent"
+		android:layout_above="@+id/btn_backup"/>
 
 	<com.weikuo.elemenzhang.phonebookwk.view.customview.RecyclerViewFastScroller
 		android:id="@+id/fastscroller"
+		android:layout_width="wrap_content"
+		android:layout_height="match_parent"
 		android:layout_alignBottom="@id/rv_contact"
 		android:layout_alignParentEnd="true"
 		android:layout_alignParentRight="true"
-		android:layout_alignTop="@id/rv_contact"
-		android:layout_width="wrap_content"
-		android:layout_height="match_parent"/>
+		android:layout_alignTop="@id/rv_contact"/>
+
+	<Button
+		android:id="@+id/btn_backup"
+		android:layout_width="match_parent"
+		android:layout_height="48dp"
+		android:layout_alignParentBottom="true"
+		android:layout_margin="12dp"
+		android:background="@color/colorPrimary"
+		android:text="Backup"
+		android:textColor="@android:color/white"/>
+
+	<RelativeLayout
+		android:id="@+id/rl_bottommenu"
+		android:layout_width="match_parent"
+		android:layout_height="100dp"
+		android:layout_alignParentBottom="true"
+		android:background="@android:color/white"
+		android:visibility="gone">
+
+		<RelativeLayout
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:layout_marginLeft="16dp"
+			android:layout_marginRight="16dp"
+			android:layout_marginTop="8dp"
+			android:orientation="horizontal">
+
+			<TextView
+				android:id="@+id/tv_restore"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:text="Restore: "/>
+
+			<TextView
+				android:id="@+id/tv_itemnum"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_toRightOf="@+id/tv_restore"
+				android:text="0 items"/>
+
+			<TextView
+				android:id="@+id/tv_percent"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_alignParentRight="true"
+				android:layout_gravity="bottom"
+				android:layout_marginRight="16dp"
+				android:text="0%"/>
+
+		</RelativeLayout>
+
 
 		<Button
-			android:id="@+id/btn_backup"
+			android:id="@+id/btn_done"
 			android:layout_width="match_parent"
 			android:layout_height="48dp"
 			android:layout_alignParentBottom="true"
 			android:layout_margin="12dp"
-			android:background="@color/colorPrimary"
-			android:text="Backup"
-			android:textColor="@android:color/white"/>
+			android:text="Done"/>
 
-		<RelativeLayout
-			android:visibility="gone"
-			android:id="@+id/rl_bottommenu"
-			android:background="@android:color/white"
-			android:layout_alignParentBottom="true"
-			android:layout_width="match_parent"
-			android:layout_height="100dp">
-			<RelativeLayout
-				android:layout_marginTop="8dp"
-				android:layout_marginLeft="16dp"
-				android:layout_marginRight="16dp"
-				android:orientation="horizontal"
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content">
-				<TextView
-					android:id="@+id/tv_restore"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:text="Restore: "/>
-				<TextView
-					android:layout_toRightOf="@+id/tv_restore"
-					android:id="@+id/tv_itemnum"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:text="0 items"/>
-				<TextView
-					android:layout_marginRight="16dp"
-					android:layout_alignParentRight="true"
-					android:id="@+id/tv_percent"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:layout_gravity="bottom"
-					android:text="0%"/>
-
-			</RelativeLayout>
-			<Button
-				android:layout_alignParentBottom="true"
-				android:id="@+id/btn_done"
-				android:layout_width="match_parent"
-				android:layout_height="48dp"
-				android:layout_margin="12dp"
-				android:background="@drawable/selector_btn_done"
-				android:text="Done"
-				android:textColor="?attr/colorPrimary"/>
-
-		</RelativeLayout>
+	</RelativeLayout>
 
 </RelativeLayout>
