--- a/app/src/main/res/layout/activity_resolve.xml
+++ b/app/src/main/res/layout/activity_resolve.xml
@@ -14,12 +14,11 @@
 		app:popupTheme="@style/AppTheme.PopupOverlay"/>
 
 	<android.support.v7.widget.RecyclerView
-		android:layout_marginTop="?attr/actionBarSize"
 		android:id="@+id/rv_archives_contact"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		android:layout_alignParentStart="true"
-		android:layout_above="@+id/btn_restore"/>
+		android:layout_below="@+id/toolbar"
+		android:layout_alignParentStart="true"/>
 
 	<Button
 		android:id="@+id/btn_restore"
