--- a/app/src/main/res/layout/fragment_tab_archives.xml
+++ b/app/src/main/res/layout/fragment_tab_archives.xml
@@ -8,7 +8,7 @@
 		android:id="@+id/rv_archives"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		android:layout_above="@+id/btn_backup"/>
+		android:layout_above="@+id/btn_restore"/>
 
 
 	<Button
