--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -11,7 +11,7 @@
 	tools:layout_editor_absoluteY="81dp"
 	tools:layout_editor_absoluteX="0dp">
 
-	<android.support.v4.view.ViewPager
+	<com.weikuo.elemenzhang.phonebookwk.view.customview.MyViewPager
 		app:layout_behavior="@string/appbar_scrolling_view_behavior"
 		android:id="@+id/vp_mainpager"
 		android:layout_width="0dp"
@@ -31,6 +31,7 @@
 		android:id="@+id/tl_maintab"
 		android:layout_width="0dp"
 		android:layout_height="48dp"
+		app:tabIndicatorColor="@android:color/white"
 		android:background="@color/colorPrimary"
 		app:layout_constraintHorizontal_bias="0.0"
 		app:layout_constraintLeft_toLeftOf="parent"
