--- a/app/src/main/res/layout/fragment_tab_archives.xml
+++ b/app/src/main/res/layout/fragment_tab_archives.xml
@@ -2,13 +2,15 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:background="#fafafa"
                 android:orientation="vertical">
 
 	<android.support.v7.widget.RecyclerView
 		android:id="@+id/rv_archives"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		android:layout_above="@+id/btn_restore"/>
+		android:layout_above="@+id/btn_restore"
+		android:background="#fafafa"/>
 
 
 	<Button
@@ -17,8 +19,10 @@
 		android:layout_height="48dp"
 		android:layout_alignParentBottom="true"
 		android:layout_margin="12dp"
-		android:background="@color/colorPrimary"
+		android:textSize="18sp"
+		android:background="@drawable/shape_solid_button"
 		android:text="Restore"
+		android:textAllCaps="false"
 		android:textColor="@android:color/white"/>
 
 </RelativeLayout>
