--- a/app/src/main/res/layout/item_recyclerview_archives.xml
+++ b/app/src/main/res/layout/item_recyclerview_archives.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
+	android:id="@+id/cl_itemview"
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
-	xmlns:tools="http://schemas.android.com/tools"
-	android:id="@+id/cl_itemview"
 	android:layout_width="match_parent"
-	android:layout_height="90dp">
+	android:layout_height="90dp"
+	android:layout_marginLeft="8dp"
+	android:layout_marginRight="8dp"
+	android:background="#ffffff">
 
 	<ImageView
 		android:id="@+id/iv_icon"
@@ -21,7 +23,7 @@
 
 	<TextView
 		android:id="@+id/tv_archives_name"
-		android:layout_width="wrap_content"
+		android:layout_width="180dp"
 		android:layout_height="wrap_content"
 		android:layout_marginLeft="16dp"
 		android:layout_marginTop="24dp"
@@ -45,19 +47,19 @@
 	<ImageView
 		android:layout_width="12dp"
 		android:layout_height="6dp"
-		android:background="@drawable/triangle"
-		app:layout_constraintLeft_toRightOf="@+id/tv_item_volume"
+		android:layout_marginBottom="29dp"
 		android:layout_marginLeft="9dp"
+		android:background="@drawable/triangle"
 		app:layout_constraintBottom_toBottomOf="parent"
-		android:layout_marginBottom="29dp"/>
+		app:layout_constraintLeft_toRightOf="@+id/tv_item_volume"/>
 
 	<RadioButton
 		android:id="@+id/rb_archive_select"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		app:layout_constraintTop_toTopOf="parent"
-		app:layout_constraintBottom_toBottomOf="parent"
 		android:layout_marginRight="24dp"
-		app:layout_constraintRight_toRightOf="parent"/>
+		app:layout_constraintBottom_toBottomOf="parent"
+		app:layout_constraintRight_toRightOf="parent"
+		app:layout_constraintTop_toTopOf="parent"/>
 
 </android.support.constraint.ConstraintLayout>
