--- a/app/src/main/res/layout/item_recyclerview_contact.xml
+++ b/app/src/main/res/layout/item_recyclerview_contact.xml
@@ -1,26 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
+	android:id="@+id/rv_item"
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	android:layout_width="match_parent"
 	android:layout_height="70dp"
+	android:descendantFocusability="blocksDescendants"
 	android:gravity="center_vertical"
 	>
 
 	<TextView
 		android:id="@+id/tv_title"
-		android:text="#"
-		android:gravity="center"
-		android:textColor="@color/colorAccent"
-		android:textSize="30sp"
 		android:layout_width="40dp"
 		android:layout_height="40dp"
-		app:layout_constraintTop_toTopOf="parent"
-		app:layout_constraintBottom_toBottomOf="parent"
-		app:layout_constraintVertical_bias="0.512"
 		android:layout_marginLeft="16dp"
+		android:gravity="center"
+		android:text="#"
+		android:textColor="@color/pinkAccent"
+		android:textSize="30sp"
 		android:visibility="invisible"
-		app:layout_constraintLeft_toLeftOf="parent"/>
+		app:layout_constraintBottom_toBottomOf="parent"
+		app:layout_constraintLeft_toLeftOf="parent"
+		app:layout_constraintTop_toTopOf="parent"
+		app:layout_constraintVertical_bias="0.512"/>
 
 	<com.weikuo.elemenzhang.phonebookwk.view.customview.RoundedLetterView
 		android:id="@+id/rlv_name_view"
@@ -31,34 +33,38 @@
 		android:layout_marginStart="10dp"
 		android:layout_marginTop="8dp"
 		app:layout_constraintBottom_toBottomOf="parent"
+		app:layout_constraintLeft_toRightOf="@+id/tv_title"
 		app:layout_constraintTop_toTopOf="parent"
 		app:layout_constraintVertical_bias="0.388"
 		app:rlv_backgroundColorValue="@color/colorPrimary"
 		app:rlv_titleColor="@android:color/white"
 		app:rlv_titleSize="25dp"
 		app:rlv_titleText="A"
-		app:layout_constraintLeft_toRightOf="@+id/tv_title"
 		/>
 
 	<TextView
-		android:text="abc"
 		android:id="@+id/tv_contactname"
-		android:layout_width="wrap_content"
+		android:layout_width="180dp"
 		android:layout_height="wrap_content"
-		app:layout_constraintTop_toTopOf="parent"
-		app:layout_constraintBottom_toBottomOf="parent"
-		app:layout_constraintRight_toRightOf="parent"
-		app:layout_constraintLeft_toRightOf="@+id/rlv_name_view"
-		android:layout_marginLeft="8dp"
+		android:layout_marginLeft="16dp"
+		android:layout_marginRight="8dp"
+		android:singleLine="true"
+		android:text="abc"
 		android:textSize="16sp"
-		app:layout_constraintHorizontal_bias="0.109"
-		app:layout_constraintVertical_bias="0.506"/>
+		app:layout_constraintBottom_toBottomOf="parent"
+		app:layout_constraintHorizontal_bias="0.115"
+		app:layout_constraintLeft_toRightOf="@+id/rlv_name_view"
+		app:layout_constraintRight_toLeftOf="@+id/cb_contact_select"
+		app:layout_constraintTop_toTopOf="parent"
+		app:layout_constraintVertical_bias="0.509"/>
+
 	<CheckBox
 		android:id="@+id/cb_contact_select"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		app:layout_constraintTop_toTopOf="parent"
-		app:layout_constraintBottom_toBottomOf="parent"
 		android:layout_marginRight="24dp"
-		app:layout_constraintRight_toRightOf="parent"/>
+		android:clickable="false"
+		app:layout_constraintBottom_toBottomOf="parent"
+		app:layout_constraintRight_toRightOf="parent"
+		app:layout_constraintTop_toTopOf="parent"/>
 </android.support.constraint.ConstraintLayout>
