--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -4,33 +4,50 @@
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	android:layout_width="match_parent"
 	android:layout_height="@dimen/nav_header_height"
-	android:background="@drawable/side_nav_bar"
-	android:gravity="bottom"
-	android:orientation="vertical"
-	android:paddingBottom="@dimen/activity_vertical_margin"
+	android:background="@drawable/group_11"
+	android:gravity="center_vertical"
+	android:orientation="horizontal"
 	android:paddingLeft="@dimen/activity_horizontal_margin"
 	android:paddingRight="@dimen/activity_horizontal_margin"
-	android:paddingTop="@dimen/activity_vertical_margin"
 	android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
 	<ImageView
 		android:id="@+id/imageView"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:paddingTop="@dimen/nav_header_vertical_spacing"
-		app:srcCompat="@android:drawable/sym_def_app_icon"/>
+		android:layout_width="53dp"
+		android:layout_height="53dp"
+		app:srcCompat="@drawable/ic_internal_storage_big"/>
 
-	<TextView
+	<RelativeLayout
+		android:id="@+id/ll_storage"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:paddingTop="@dimen/nav_header_vertical_spacing"
-		android:text="Android Studio"
-		android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
+		android:layout_marginLeft="12dp"
+		android:orientation="vertical">
 
-	<TextView
-		android:id="@+id/textView"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:text="android.studio@android.com"/>
+		<TextView
+			android:id="@+id/tv_storage"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:text="Storage"
+			android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
+
+		<TextView
+			android:id="@+id/textView"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_below="@+id/tv_storage"
+			android:layout_marginTop="7dp"
+			android:text="Back to:SDcard/emulat/0/"/>
+
+		<ImageView
+			android:id="@+id/iv_arrow"
+			android:layout_width="20dp"
+			android:layout_height="20dp"
+			android:layout_alignParentRight="true"
+			android:layout_alignTop="@+id/textView"
+			android:layout_marginRight="6dp"
+			android:background="@drawable/ic_triangle"/>
+	</RelativeLayout>
+
 
 </LinearLayout>
