--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
 	<group android:checkableBehavior="single">
-		<item
+		<!--<item
 			android:id="@+id/nav_camera"
 			android:icon="@drawable/ic_menu_camera"
 			android:title="Import"/>
@@ -13,24 +13,11 @@
 		<item
 			android:id="@+id/nav_slideshow"
 			android:icon="@drawable/ic_menu_slideshow"
-			android:title="Slideshow"/>
+			android:title="Slideshow"/>-->
 		<item
 			android:id="@+id/nav_manage"
-			android:icon="@drawable/ic_menu_manage"
-			android:title="Tools"/>
+			android:icon="@drawable/group_2"
+			android:title="Share"/>
 	</group>
-
-	<item android:title="Communicate">
-		<menu>
-			<item
-				android:id="@+id/nav_share"
-				android:icon="@drawable/ic_menu_share"
-				android:title="Share"/>
-			<item
-				android:id="@+id/nav_send"
-				android:icon="@drawable/ic_menu_send"
-				android:title="Send"/>
-		</menu>
-	</item>
 
 </menu>
