--- a/app/src/main/res/layout/activity_storage.xml
+++ b/app/src/main/res/layout/activity_storage.xml
@@ -39,6 +39,7 @@
 			android:layout_alignParentRight="true"
 			android:layout_gravity="right|end"
 			android:layout_width="wrap_content"
+			android:checked="true"
 			android:layout_height="wrap_content"/>
 	</RelativeLayout>
 
