--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -37,7 +37,7 @@
 			android:layout_height="wrap_content"
 			android:layout_below="@+id/tv_storage"
 			android:layout_marginTop="7dp"
-			android:text="Back to:SDcard/emulat/0/"/>
+			android:text="SDcard/emulat/0/"/>
 
 		<ImageView
 			android:id="@+id/iv_arrow"
