添加打开获取权限 获取存储路径

--- a/app/src/main/res/layout/dialog_custom.xml
+++ b/app/src/main/res/layout/dialog_custom.xml
@@ -17,7 +17,7 @@
 				android:id="@+id/tv_restore"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
-				android:text="Restore: "/>
+				android:text="Backed up: "/>
 
 			<TextView
 				android:id="@+id/tv_itemnum"
