--- a/app/src/main/res/layout/item_recyclerview_archives.xml
+++ b/app/src/main/res/layout/item_recyclerview_archives.xml
@@ -28,6 +28,7 @@
 		android:layout_marginLeft="16dp"
 		android:layout_marginTop="24dp"
 		android:text="Archive.vcf"
+		android:singleLine="true"
 		app:layout_constraintLeft_toRightOf="@+id/iv_icon"
 		app:layout_constraintTop_toTopOf="parent"/>
 
