eventbus兼容性问题

--- a/app/src/main/res/drawable/shape_button.xml
+++ b/app/src/main/res/drawable/shape_button.xml
@@ -3,5 +3,5 @@
 	android:shape="rectangle">
 <stroke
 	android:width="2dp"
-	android:color="?attr/colorPrimary"/>
+	android:color="@color/colorPrimary"/>
 </shape>
